kustomize/nodectl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodectl-ingress
  namespace: nodectl
  labels:
    app: nodectl
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nodectl.jjbly.uk
      secretName: nodectl-jjbly-uk-tls
  rules:
    - host: nodectl.jjbly.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodectl
                port:
                  number: 8080
